--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -14,91 +14,111 @@
   color: #434a54;
 }
 
+.flash-box {
+  color: white;
+  font-size: 1rem;
+  font-weight: lighter;
+  text-align: center;
+  width: 100vw;
+}
+.header {
+  color: $white;
+  background: #38ae;
+  padding: 0 40px 0  20px;
+  text-align: center;
+  height: 20px;
+ }
 .contents {
-    .header {
-      &__text {
-        background: #38ae;
-    color: white;
-    width: 100vw;
-    text-align: center;
-    height: 20px;
-    line-height: 20px;
-      }
-    } 
   .chat-side {
+    color: white;
     width: 300px;
     float: left;
-    color: $white;
     .side-header {
-      height: 100px;
+      height: 101px;
+      padding: 0 20px;
       background: #253141;
       display: flex;
       align-items: center;
-      padding: 0 20px;
       &__box {
-        width: 100%;
-        font-size: 16px;
-        font-weight: bold;
         display: flex;
         justify-content: space-between;
+        width: 100%;
+        &__user-name {
+          font-size: 16px;
+          font-weight: bold;
+          color: $white;
+        }
+        &__menu {
+          display: flex;
+          &__group {
+            padding-left: 0.3rem;
+          }
+          &__edit {
+            padding-left: 0.3rem;
+          }
+        }
       }
     }
     .groups {
-      height: calc(100vh - 140px);
       background: #2f3e51;
       padding: 20px 20px 0;
+      height: calc(100vh - 100px - 20px);
+      box-sizing: border-box;
       .group {
-        padding-bottom: 40px;
+        margin-bottom: 40px;
         &__name {
-          padding-bottom: 5px;
+          margin-bottom: 5px;
           font-size: 15px;
           font-weight: bold;
+          color: $white;
         }
         &__message {
           font-size: 11px;
           font-weight: bold;
+          color: $white;
         }
       }
     }
   }
   .chat-main {
-    width: calc(100vw - 300px);
     float: left;
+    width: calc(100vw - 300px);
     .main-header {
-      height: 100px;
       padding: 0 40px;
+      height: 100px;
       border-bottom: solid 1px #eeeeee;
       display: flex;
-      justify-content:space-between;
+      justify-content: space-between;
       &__box {
-        padding-top: 35px;
+        margin-top: 35px;
         &__group-name {
-          padding-bottom: 15px;
           font-size: 20px;
           color: #333333;
+          margin-bottom: 15px;
         }
         &__member {
-          font-size: 12px;
-          color: #999999;
+          @include user__info-date;
         }
       }
       &__edit {
         margin-top: 28px;
         height: 40px;
-        padding: 0 20px; 
-        line-height: 40px;
+        padding: 0 20px;
         border: solid 1px blue;
         color: blue;
+        line-height: 40px;
       }
     }
     .messages {
-      padding: 46px 40px;
-      height: calc(100vh - 303px);
+      height: calc(100vh - 100px - 20px - 90px);
       background: #fafafa;
+      padding: 46px 40px ;
+      box-sizing: border-box;
       .message {
-        padding-bottom: 40px;
+        margin-bottom: 40px;
         &__user__info {
           display: flex;
+          margin-bottom: 10px;
           &__name {
             @include user__info-name;
           }
@@ -111,14 +131,16 @@
         }
       }
       .message-second {
+        margin-bottom: 40px;
         &__user__info {
-          display: flex;
-          &__name {
-            @include user__info-name;
-          }
-          &__date {
-            @include user__info-date;
-          }
+         display: flex;
+         &__name {
+          @include user__info-name;
+          margin-bottom: 10px;
+         }
+         &__date {
+           @include user__info-date;
+         }
         }
         &__text {
           @include user__info-text;
@@ -127,39 +149,38 @@
     }
     .form {
       height: 90px;
-      background: gray;
-      padding: 0 40px;
+      background: #ddd;
+      box-sizing: border-box;
+      padding: 20px 40px;
       .new__message {
         display: flex;
-        padding-top: 20px;
         .input__box {
-          background: white;
           position: relative;
           width: 100%;
           &__text {
+            padding: 0 40px 0 10px;
             height: 50px;
             width: 100%;
             border-style: none;
-            padding-left: 10px;
-            @include user__info-name;
+            box-sizing: border-box;
           }
           &__image {
             position: absolute;
-            padding-right: 10px;
             top: 10px;
             right: 10px;
-            cursor: pointer;
+            padding-right: 10px;
             &__file {
               display: none;
             }
           }
         }
         &__btn {
-          height:50px;
           width: 100px;
+          height: 50px;
           background: blue;
-          color: white;
           margin-left: 15px;
+          padding: 0 30px;
+          color: white;
         }
       }
     }
