git commit --allow-empty -m "first commit"

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,8 @@
-@import "variable";
-@import "reset";
 @import "font-awesome";
+@import "variable";
 @import "index";
+@import "config/colors";
+@import "config/reset";
+@import "modules/user";
+@import "modules/flash";
+@import "modules/group";
