--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -20,7 +20,7 @@
     / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
-      %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
+      %label.chat-group-form__label{for: "chat_group_チャットメンバー"} チャットメンバー
     #chat-form.chat-group-form__field--right
       .chat-group-user
         %input{name:'group[user_ids][]', type:'hidden'}
