--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -23,7 +23,7 @@
       %label.chat-group-form__label{for: "chat_group_チャットメンバー"} チャットメンバー
     #chat-form.chat-group-form__field--right
       .chat-group-user
-        %input{name:'group[user_ids][]', type:'hidden'}
+        %input{name:'group[user_ids][]', type:'hidden', value:"#{current_user.id}"}
           %p.chat-group-user__name 
           .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn
             削除
